Add new structure of the documentation
* Introduction is partly written.
* Structure of the complete doc table of contents
* Color modifications to follow Quetzal design chart
* Added sphinx-tabs as a solution to show different code snippets on sphinx

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -3,5 +3,9 @@
 }
 
 .wy-side-nav-search {
-    background-color: #333131;
+    background-color: #56565a;
+}
+
+.wy-menu-vertical p.caption {
+    color: #00aac7;
 }
